--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html, body {
+    min-height: 100vh;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
@@ -49,7 +53,7 @@ body {
 }
 
 .hero p {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     font-size: 1.2em;
 }
 
@@ -70,7 +74,12 @@ body {
 }
 
 .portfolio h2 {
-    font-size: 2.5em;
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+.portfolio h3 {
+    font-size: 1.5em;
     margin-bottom: 20px;
 }
 
